refactor(processor): use Proton 0.71 formatting support
Update Arez to consume Proton 0.71 so generated-source formatting is supplied by Proton's shaded formatter support instead of a direct Arez formatter dependency closure.

Remove the local ArezProcessor formatter implementation, rely on Proton's emitTypeSpec path and Proton QA's formatted fixture handling, and add formatted persist processor fixtures so both processors exercise the shared behavior.

Update the project setup documentation and changelog to describe the Proton-backed formatting path and the persist processor option.